feat: add AI agents guide page, agent skills generator, Card component improvements
- Add AI agents guide (ai-agents.mdx) with scenarios, how-it-works steps, API methods, practical tips, resources, and integration instructions
- Add agent skills generator scripts (scripts/skills/)
- Make Card component support optional href (static cards) and optional icon
- Add ArrowUpRight indicator on link cards with hover animation
- Add new Lucide icons for scenario cards
- Untrack generated AGENTS.md (now in .gitignore)
- Update forms guide with mermaid lifecycle diagram
- Update llms.txt generator, README, turbo config

--- a/apps/docs/content/guides/forms.mdx
+++ b/apps/docs/content/guides/forms.mdx
@@ -78,7 +78,16 @@ description: Представления с набором полей для по
 
 В поле `text` вам необходимо прислать форматированный текст в синтаксисе `markdown`. Поддерживаются конструкции, указанные в таблице ниже.
 
-<MarkdownSyntaxTable />
+| Элемент | Синтаксис | Результат |
+|---------|-----------|-----------|
+| Жирный | `**это жирный текст**` или `__это жирный текст__` | **это жирный текст** |
+| Курсив | `*это курсивный текст*` или `_это курсивный текст_` | *это курсивный текст* |
+| Ссылки | `[текст ссылки](https://www.google.com)` | [текст ссылки](https://www.google.com) |
+| Маркированный список | `- первый пункт`<br/>`- второй пункт` | • первый пункт<br/>• второй пункт |
+| Нумерованный список | `1. первый пункт`<br/>`2. второй пункт` | 1. первый пункт<br/>2. второй пункт |
+| Зачеркнутый | `~~это зачеркнутый текст~~` | ~~это зачеркнутый текст~~ |
+| Строчный код | `` `код в тексте` `` | `код в тексте` |
+| Блок кода | `` ``` ``<br/>Блок кода<br/>`` ``` `` | `Блок кода` |
 
 ### Разделитель (divider)
 
