feat: add new audit events, webhook unfurling docs, improve workflows
- Add 3 new audit event types: message_created, reaction_created, reaction_deleted
- Add link unfurling (link_shared) webhook documentation
- Improve file upload and unfurling workflow descriptions
- Add updates.mdx entry for new audit events

--- a/apps/docs/content/guides/webhook.mdx
+++ b/apps/docs/content/guides/webhook.mdx
@@ -56,6 +56,14 @@ description: Получение уведомлений о событиях в р
 
 <SchemaBlock name="CompanyMemberWebhookPayload" />
 
+## Разворачивание ссылок
+
+Данный вебхук отправляется при появлении ссылки на один из доменов, указанных в настройках Unfurl-бота. Для получения таких событий необходимо создать специального Unfurl-бота. После получения этого вебхука вы можете воспользоваться методом [Unfurl (разворачивание ссылок)](POST /messages/{id}/link_previews) и создать предпросмотр ссылки в сообщении.
+
+Подробнее о разворачивании ссылок вы можете прочитать в статье [Unfurling ссылок в Пачке](https://www.pachca.com/articles/unfurling-ssylok-v-pachce)
+
+<SchemaBlock name="LinkSharedWebhookPayload" />
+
 ## Безопасность
 
 Каждый исходящий вебхук защищён с помощью подписи, основанной на хешировании содержимого. Подпись `HMAC` с использованием алгоритма `SHA256` вычисляется из тела запроса и передаётся в заголовке `Pachca-Signature`.
