Feature/ai agents page (#73)

--- a/apps/docs/content/guides/updates.mdx
+++ b/apps/docs/content/guides/updates.mdx
@@ -9,6 +9,30 @@ useUpdatesComponent: true
 
 Новые методы в API и дополнения в уже существующих
 
+<!-- update:2026-02-21 -->
+
+## Ресурсы для AI-агентов
+
+Появился новый раздел документации — [AI агенты](/guides/ai-agents). В нём описано, как Пачка работает с AI-агентами, и собраны все ресурсы для интеграции.
+
+Что нового:
+
+- **Agent Skills** — описание API в формате skill-файлов для подключения к 40+ AI-агентам (Claude Code, Cursor, Codex, Windsurf и др.)
+- **Context7 MCP** — документация Пачки доступна через MCP-сервер Context7 для агентов с поддержкой MCP
+- **OpenAPI-спецификация** — спецификация для кодогенерации и автоматического создания клиентов
+
+<!-- update:2026-02-20 -->
+
+## Новые типы аудит-событий
+
+В журнал аудита событий добавлены новые типы событий для отслеживания создания сообщений и работы с реакциями:
+
+- `message_created` — сообщение создано
+- `reaction_created` — реакция добавлена
+- `reaction_deleted` — реакция удалена
+
+Полный список типов событий доступен на странице [Журнал аудита событий](/guides/audit-events).
+
 <!-- update:2026-02-19 -->
 
 ## Новые типы аудит-событий
