chore: update skills install command and icons
- npx skills add dev.pachca.com → pachca/openapi (enables skills.sh listing)
- AI agents guide icon Bot → Sparkles
- Link to agentskills.io spec and skills.sh directory

--- a/apps/docs/content/guides/ai-agents.mdx
+++ b/apps/docs/content/guides/ai-agents.mdx
@@ -103,7 +103,7 @@ description: Как Пачка работает с AI-агентами и как
 | `pachca-tasks` | Создание и управление задачами (напоминаниями) |
 | `pachca-security` | Журнал аудита событий и DLP-система |
 
-Скиллы соответствуют [Agent Skills Discovery RFC](https://github.com/cloudflare/agent-skills-discovery-rfc) и совместимы с 40+ AI-агентами через [Vercel Skills CLI](https://github.com/vercel-labs/skills).
+Скиллы соответствуют спецификации [Agent Skills](https://agentskills.io) и [Agent Skills Discovery RFC](https://github.com/cloudflare/agent-skills-discovery-rfc), совместимы с 40+ AI-агентами через [Skills CLI](https://skills.sh).
 
 ### Другие форматы
 
