chore: improve docs SEO, fix MDX-to-markdown conversion, update ai-agents guide
- Fix mdx-expander: add CardGroup/Card conversion, fix ImageCard regex for paths with slashes, strip JSX template literal wrappers from CodeBlock
- Merge "Как это работает" steps with API methods table in ai-agents guide
- Migrate robots.txt and sitemap.xml to static generation
- Add structured data and meta improvements to layout and pages
- Regenerate all markdown/llms files

--- a/apps/docs/content/guides/ai-agents.mdx
+++ b/apps/docs/content/guides/ai-agents.mdx
@@ -15,6 +15,8 @@ description: Как Пачка работает с AI-агентами и как
 
 <ImageCard src="/images/ai-agent-kai.jpg" alt="Пример работы AI-агента в треде Пачки" caption="Пример работы AI-агента в треде Пачки" />
 
+<Info>Как мы сделали AI-агента, который живёт в корпоративном мессенджере — [читайте в блоге Пачки](https://pachca.com/blog/ai-agent-v-korporativnom-messendzhere)</Info>
+
 <CardGroup columns={2}>
   <Card title="Ответ на вопрос" icon="CircleHelp">
     Читает тред, ищет ответ в базе знаний, отвечает в тот же тред
@@ -58,26 +60,25 @@ description: Как Пачка работает с AI-агентами и как
     Агент получает события через [исходящий вебхук](/guides/webhook) — упоминание по имени, ответ в тред или личное сообщение боту.
   </Step>
   <Step title="Сбор контекста">
-    Агент читает историю сообщений треда через API и собирает контекст.
+    Агент читает историю сообщений и информацию о чате, чтобы понять контекст запроса.
+
+    - [Список сообщений чата](GET /messages) — история сообщений треда или чата
+    - [Информация о чате](GET /chats/{id}) — участники и тема чата
   </Step>
   <Step title="Выполнение действий">
-    Агент выполняет нужные действия — отправляет сообщения, создаёт задачи, вызывает внешние сервисы.
+    Агент выполняет нужные действия — отправляет сообщения, создаёт задачи, вызывает внешние сервисы. Реакция-индикатор показывает пользователю, что агент работает.
+
+    - [Новое сообщение](POST /messages) — отправить сообщение в канал или беседу
+    - [Новый тред](POST /messages/{id}/thread) — создать тред и ответить
+    - [Новая реакция](POST /messages/{id}/reactions) — поставить реакцию-индикатор
   </Step>
   <Step title="Ответ">
-    Результат агент отправляет обратно в тред или в личные сообщения через API.
+    Результат агент отправляет обратно в тред или в личные сообщения и снимает реакцию-индикатор.
+
+    - [Новое сообщение](POST /messages) — отправить результат
+    - [Удаление реакции](DELETE /messages/{id}/reactions) — снять реакцию-индикатор
   </Step>
 </Steps>
-
-## API-методы для типичных задач агента
-
-| Задача | Метод | Описание |
-|--------|-------|----------|
-| Прочитать обсуждение | [Список сообщений чата](GET /messages) | Получить историю сообщений треда или чата |
-| Ответить в тред | [Новый тред](POST /messages/{id}/thread), [Новое сообщение](POST /messages) | Создать тред и отправить ответ |
-| Отправить результат | [Новое сообщение](POST /messages) | Отправить сообщение в канал или беседу |
-| Показать статус работы | [Новая реакция](POST /messages/{id}/reactions), [Удаление реакции](DELETE /messages/{id}/reactions) | Поставить реакцию-индикатор и снять по завершении |
-| Получить контекст | [Информация о чате](GET /chats/{id}) | Узнать участников и тему чата |
-| Получить события | [Исходящий Webhook](/guides/webhook) | Получать уведомления о новых сообщениях в реальном времени |
 
 ## Практические советы
 
