feat: add Postman/Bruno collection generation
- generate-llms.ts: добавлен generatePostmanCollection(), генерирует public/pachca.postman_collection.json
  со всеми endpoint'ами, разбитыми по тегам, с примерами тел запросов
- turbo.json: добавлен pachca.postman_collection.json в outputs generate-llms
- next.config.ts: CORS-заголовки для /openapi.yaml и /pachca.postman_collection.json
- .prettierignore: исключён public/pachca.postman_collection.json
- requests-responses.mdx: секция "Тестирование API" с карточками Postman/Bruno
- home.mdx: ссылка на коллекцию в секции API
- README.md: раздел Тестирование с Postman/Bruno

--- a/apps/docs/content/guides/requests-responses.mdx
+++ b/apps/docs/content/guides/requests-responses.mdx
@@ -11,6 +11,19 @@ description: Формат запросов, авторизация, пагина
 
 `access_token` не имеет времени жизни. Если вы используете `access_token` «Администратора» или «Владельца» пространства, то в разделе «Автоматизации» → «API» вы можете воспользоваться функцией сброса токена. В таком случае вы увидите новый `Access token`, а предыдущий станет недействительным.
 
+## Тестирование API
+
+Импортируйте готовую коллекцию для тестирования методов API локально:
+
+<CardGroup columns={2}>
+  <Card title="Postman" icon="ArrowDownToLine" href="/pachca.postman_collection.json">
+    Скачайте коллекцию со всеми методами. Запросы выполняются локально с вашего компьютера.
+  </Card>
+  <Card title="Bruno" icon="ArrowDownToLine" href="/pachca.postman_collection.json">
+    Open-source альтернатива Postman. Импортируйте тот же файл: File → Import → Postman Collection.
+  </Card>
+</CardGroup>
+
 ## Структура запроса метода API
 
 При выполнении запроса, `access_token` необходимо поместить в заголовки (ключ `Authorization` с указанием типа `Bearer`), а в теле запроса указать все необходимые параметры метода. При этом не забудьте, что сервер ожидает перечисление параметров в формате `JSON`, кодировке `UTF-8` и по протоколу `HTTPS`.
