fix: polish Postman collection page and updates entry
- cards.tsx: поддержка download-пропа в Card (скачивание вместо открытия, иконка ArrowDownToLine анимируется вниз)
- requests-responses.mdx: список совместимых инструментов → блок кода с URL → карточка скачивания
- home.mdx: убран блок Info о коллекции из секции API
- updates.mdx: добавлена запись о коллекции от 2026-02-22
- markdown-content.tsx: em — убрана курсивность (not-italic)

--- a/apps/docs/content/guides/requests-responses.mdx
+++ b/apps/docs/content/guides/requests-responses.mdx
@@ -13,14 +13,18 @@ description: Формат запросов, авторизация, пагина
 
 ## Тестирование API
 
-Импортируйте готовую коллекцию для тестирования методов API локально:
+Коллекция содержит все методы API с примерами запросов и настроенной авторизацией. Совместима с:
 
-<CardGroup columns={2}>
-  <Card title="Postman" icon="ArrowDownToLine" href="/pachca.postman_collection.json">
-    Скачайте коллекцию со всеми методами. Запросы выполняются локально с вашего компьютера.
-  </Card>
-  <Card title="Bruno" icon="ArrowDownToLine" href="/pachca.postman_collection.json">
-    Open-source альтернатива Postman. Импортируйте тот же файл: File → Import → Postman Collection.
+- **Postman** *File → Import*
+- **Bruno** (open-source альтернатива) *File → Import → Postman Collection*
+
+<CodeBlock language="text" title="Коллекция Postman/Bruno">
+  {`https://dev.pachca.com/pachca.postman_collection.json`}
+</CodeBlock>
+
+<CardGroup columns={1}>
+  <Card title="Скачать коллекцию" icon="FileText" href="/pachca.postman_collection.json" download>
+    Файл в формате Postman Collection v2.1, совместим с Postman и Bruno.
   </Card>
 </CardGroup>
 
