--- a/apps/docs/content/guides/updates.mdx
+++ b/apps/docs/content/guides/updates.mdx
@@ -9,6 +9,14 @@ useUpdatesComponent: true
 
 Новые методы в API и дополнения в уже существующих
 
+<!-- update:2026-02-22 -->
+
+## Коллекция Postman/Bruno
+
+Добавлена готовая коллекция запросов для тестирования API локально. Коллекция содержит все методы API, разбитые по разделам, с примерами запросов и настроенной авторизацией.
+
+Подробнее в разделе [Тестирование API](/guides/requests-responses#testirovanie-api).
+
 <!-- update:2026-02-21 -->
 
 ## Ресурсы для AI-агентов
