feat: add Scalar API client to testing section, fix bearer auth scheme
- Add Scalar online client (client.scalar.com) to the Testing API section
- Add security note about proxy.scalar.com and token handling
- Fix TypeSpec BearerAuth: was incorrectly using BasicAuth (scheme: Basic),
  now uses built-in HttpBearerAuth (scheme: Bearer)
- Update release notes for 2026-02-22

--- a/apps/docs/content/guides/requests-responses.mdx
+++ b/apps/docs/content/guides/requests-responses.mdx
@@ -13,6 +13,22 @@ description: Формат запросов, авторизация, пагина
 
 ## Тестирование API
 
+### Scalar
+
+Онлайн-клиент с интерфейсом для тестирования всех методов API прямо в браузере — без установки. Достаточно вставить токен и отправить запрос.
+
+<CardGroup columns={1}>
+  <Card title="Открыть Scalar API Client" href="https://client.scalar.com/?url=https://dev.pachca.com/openapi.yaml">
+    Браузерный клиент на основе OpenAPI-спецификации. Бесплатно, без регистрации.
+  </Card>
+</CardGroup>
+
+<Callout type="warning">
+  Браузерный клиент Scalar отправляет запросы через прокси-сервер `proxy.scalar.com` — это необходимо из-за ограничений браузера (CORS). Токен проходит через сервер Scalar, но [по их заявлению](https://github.com/scalar/scalar) данные не логируются. Scalar — проект с открытым исходным кодом (MIT), включая код прокси. Если вы хотите избежать передачи токена через сторонний сервер, используйте Postman или Bruno — они работают локально и отправляют запросы напрямую.
+</Callout>
+
+### Postman / Bruno
+
 Коллекция содержит все методы API с примерами запросов и настроенной авторизацией. Совместима с:
 
 - **Postman** *File → Import*
@@ -23,7 +39,7 @@ description: Формат запросов, авторизация, пагина
 </CodeBlock>
 
 <CardGroup columns={1}>
-  <Card title="Скачать коллекцию" icon="FileText" href="/pachca.postman_collection.json" download>
+  <Card title="Скачать коллекцию" href="/pachca.postman_collection.json" download>
     Файл в формате Postman Collection v2.1, совместим с Postman и Bruno.
   </Card>
 </CardGroup>
