--- a/apps/docs/content/guides/updates.mdx
+++ b/apps/docs/content/guides/updates.mdx
@@ -11,9 +11,9 @@ useUpdatesComponent: true
 
 <!-- update:2026-02-22 -->
 
-## Коллекция Postman/Bruno
+## Инструменты для тестирования API
 
-Добавлена готовая коллекция запросов для тестирования API локально. Коллекция содержит все методы API, разбитые по разделам, с примерами запросов и настроенной авторизацией.
+Добавлен онлайн-клиент **Scalar** — тестирование всех методов API прямо в браузере без установки. Также доступна готовая коллекция запросов для **Postman** и **Bruno** с примерами и настроенной авторизацией.
 
 Подробнее в разделе [Тестирование API](/guides/requests-responses#testirovanie-api).
 
