fix: remove card borders from workflow accordion, fix copy

--- a/apps/docs/content/guides/ai-agents.mdx
+++ b/apps/docs/content/guides/ai-agents.mdx
@@ -96,7 +96,7 @@ description: Как Пачка работает с AI-агентами и как
 <AgentSkillsWorkflows />
 
 <Info>
-  Не нашли нужный сценарий? [Предложите новый workflow](https://github.com/pachca/openapi/issues/new?template=workflow-suggestion.yml) — мы рассмотрим и добавим его в следующую версию скиллов.
+  Не нашли нужный сценарий? [Предложите новый workflow](https://github.com/pachca/openapi/issues/new?template=workflow-suggestion.yml) — мы рассмотрим и добавим его в скиллы.
 </Info>
 
 Скиллы соответствуют спецификации [Agent Skills](https://agentskills.io) и [Agent Skills Discovery RFC](https://github.com/cloudflare/agent-skills-discovery-rfc), совместимы с 40+ AI-агентами через [Skills CLI](https://skills.sh).
