--- a/apps/docs/content/guides/ai-agents.mdx
+++ b/apps/docs/content/guides/ai-agents.mdx
@@ -93,16 +93,11 @@ description: Как Пачка работает с AI-агентами и как
 
 Описание API в формате skill-файлов для подключения к AI-агентам. Каждый скилл покрывает одну предметную область и содержит пошаговые сценарии с curl-примерами, обработку ошибок и gotchas.
 
-| Скилл | Описание |
-|-------|----------|
-| `pachca-messages` | Отправка сообщений, ответы в треды, загрузка файлов, кнопки, реакции |
-| `pachca-chats` | Управление каналами и беседами, участники, архивация, экспорт |
-| `pachca-users` | Управление сотрудниками и тегами (группами) |
-| `pachca-profile` | Профиль текущего пользователя, статус, кастомные поля |
-| `pachca-bots` | Боты, входящие/исходящие вебхуки, разворачивание ссылок |
-| `pachca-forms` | Интерактивные формы с полями ввода и кнопками |
-| `pachca-tasks` | Создание и управление задачами (напоминаниями) |
-| `pachca-security` | Журнал аудита событий и DLP-система |
+<AgentSkillsWorkflows />
+
+<Info>
+  Есть предложения по новым сценариям? [Напишите нам](https://github.com/pachca/openapi/issues/new?template=workflow-suggestion.yml) и добавим их в скиллы.
+</Info>
 
 Скиллы соответствуют спецификации [Agent Skills](https://agentskills.io) и [Agent Skills Discovery RFC](https://github.com/cloudflare/agent-skills-discovery-rfc), совместимы с 40+ AI-агентами через [Skills CLI](https://skills.sh).
 
