feat: improve skills scenarios and fix ToC multi-active headings
Skills (pachca-messages, pachca-bots, pachca-tasks, pachca-profile):
- Add 'Reply to user who messaged bot' scenario with entity_type routing
- Add mention user by name scenario with Russian name declension logic
- Add thread subscription scenario
- Fix pinned messages note (multiple pins allowed)
- Add polling via event history scenario to pachca-bots
- Add custom_properties support to pachca-tasks scenarios
- Fix GET /custom_properties to use entity_type=User/Task filter

ToC (table-of-contents.tsx):
- Switch from IntersectionObserver to scroll-based section detection
- Highlight all headings whose section content is visible in the viewport
- Indicator spans from first to last active heading
- Add ResizeObserver to recompute positions on content changes

--- a/apps/docs/content/guides/ai-agents.mdx
+++ b/apps/docs/content/guides/ai-agents.mdx
@@ -91,12 +91,12 @@ description: Как Пачка работает с AI-агентами и как
 
 ### Agent Skills (SKILL.md)
 
-Описание API в формате skill-файлов для подключения к AI-агентам. Каждый скилл покрывает одну предметную область и содержит пошаговые сценарии с curl-примерами, обработку ошибок и gotchas.
+Описание API в формате skill-файлов для подключения к AI-агентам. Каждый скилл покрывает одну предметную область и содержит: полное описание методов API входящих групп с параметрами и схемами, пошаговые сценарии с curl-примерами, обработку ошибок и gotchas (неочевидные ограничения API, которые легко упустить).
 
 <AgentSkillsWorkflows />
 
 <Info>
-  Есть предложения по новым сценариям? [Напишите нам](https://github.com/pachca/openapi/issues/new?template=workflow-suggestion.yml) и добавим их в скиллы.
+  Есть предложения по новым сценариям? [Напишите нам](https://github.com/pachca/openapi/issues/new?template=workflow-suggestion.yml) и мы добавим их в скиллы.
 </Info>
 
 Скиллы соответствуют спецификации [Agent Skills](https://agentskills.io) и [Agent Skills Discovery RFC](https://github.com/cloudflare/agent-skills-discovery-rfc), совместимы с 40+ AI-агентами через [Skills CLI](https://skills.sh).
