feat: add GET /oauth/token/info endpoint and OAuthScope enum
Document the existing OAuth token info endpoint that returns
information about the current access token including scopes,
creation date, and last usage. Add OAuthScope enum with all
42 available scope values.

--- a/apps/docs/content/guides/updates.mdx
+++ b/apps/docs/content/guides/updates.mdx
@@ -9,6 +9,12 @@ useUpdatesComponent: true
 
 Новые методы в API и дополнения в уже существующих
 
+<!-- update:2026-02-24 -->
+
+## Информация о токене
+
+Добавлен новый метод [GET /oauth/token/info](/api/get-token-info) — получение информации о текущем OAuth токене, включая скоупы, дату создания и последнего использования.
+
 <!-- update:2026-02-22 -->
 
 ## Инструменты для тестирования API
