fix: улучшения страницы обновлений и исправление цветов info callout
- Исправлен цвет info callout в системной тёмной теме (hue 290→270, соответствует ручной тёмной теме)
- Подзаголовок страницы обновлений заменён на callout со способами подписки (RSS и .md)
- Ссылки на .xml файлы теперь открываются в новой вкладке (InternalLink)
- Пересгенерированы public .md файлы и llms-full.txt

--- a/apps/docs/content/guides/updates.mdx
+++ b/apps/docs/content/guides/updates.mdx
@@ -7,7 +7,7 @@ useUpdatesComponent: true
 
 # Последние обновления
 
-Новые методы в API и дополнения в уже существующих
+<Info>Автоматически отслеживайте обновления: подпишитесь на [RSS-ленту](/feed.xml) или используйте [markdown-версию этой страницы](/guides/updates.md) для интеграции с инструментами и AI-агентами.</Info>
 
 <!-- update:2026-02-24 -->
 
