fix: улучшения UI и добавление аудит-события thread_created
- Обновлены цвета info callout и method badges (globals.css)
- Исправлены стили scope/auth badges в endpoint-header
- Улучшения mobile sidebar и логотипа
- Добавлен аудит-событие thread_created в TypeSpec enum AuditEventKey
- Обновлена запись в updates.mdx

--- a/apps/docs/content/guides/updates.mdx
+++ b/apps/docs/content/guides/updates.mdx
@@ -45,9 +45,10 @@ useUpdatesComponent: true
 
 ## Новые типы аудит-событий
 
-В журнал аудита событий добавлены новые типы событий для отслеживания создания сообщений и работы с реакциями:
+В журнал аудита событий добавлены новые типы событий для отслеживания создания сообщений, тредов и работы с реакциями:
 
 - `message_created` — сообщение создано
+- `thread_created` — тред создан
 - `reaction_created` — реакция добавлена
 - `reaction_deleted` — реакция удалена
 
