fix: добавлен chat_id в задачи, улучшены скиллы для агентов
- Task: добавлено поле chat_id в модель и параметры создания
- Скиллы: объединены воркфлоу создания задач, добавлена инструкция запрашивать токен, подсказка про контекст в треде
- Убраны упоминания "правой панели" (UI-специфичные)
- Добавлено событие аудита thread_created

--- a/apps/docs/content/guides/updates.mdx
+++ b/apps/docs/content/guides/updates.mdx
@@ -9,6 +9,19 @@ useUpdatesComponent: true
 
 <Info>Автоматически отслеживайте обновления: подпишитесь на [RSS-ленту](/feed.xml) или используйте [markdown-версию этой страницы](/guides/updates.md) для интеграции с инструментами и AI-агентами.</Info>
 
+<!-- update:2026-02-25 -->
+
+## Привязка напоминаний к чатам
+
+Напоминания теперь можно привязывать к чатам, в которых вы состоите — при создании напоминания укажите `chat_id`. В ответе всех методов напоминаний добавлено новое поле `chat_id`.
+
+Были обновлены следующие методы:
+
+- [Новое напоминание](POST /tasks)
+- [Список напоминаний](GET /tasks)
+- [Информация о напоминании](GET /tasks/{id})
+- [Редактирование напоминания](PUT /tasks/{id})
+
 <!-- update:2026-02-24 -->
 
 ## Авторизация и скоупы
