fix: исправлен шаблон $filename → ${filename}, улучшены скиллы и гайд для агентов

--- a/apps/docs/content/guides/ai-agents.mdx
+++ b/apps/docs/content/guides/ai-agents.mdx
@@ -60,9 +60,10 @@ description: Как Пачка работает с AI-агентами и как
     Агент получает события через [исходящий вебхук](/guides/webhook) — упоминание по имени, ответ в тред или личное сообщение боту.
   </Step>
   <Step title="Сбор контекста">
-    Агент читает историю сообщений и информацию о чате, чтобы понять контекст запроса.
+    Агент читает историю сообщений и информацию о чате, чтобы понять контекст запроса. Если бота вызвали в треде и других сообщений нет — основной контекст в родительском сообщении.
 
     - [Список сообщений чата](GET /messages) — история сообщений треда или чата
+    - [Информация о сообщении](GET /messages/{id}) — родительское сообщение треда
     - [Информация о чате](GET /chats/{id}) — участники и тема чата
   </Step>
   <Step title="Выполнение действий">
@@ -70,6 +71,7 @@ description: Как Пачка работает с AI-агентами и как
 
     - [Новое сообщение](POST /messages) — отправить сообщение в канал или беседу
     - [Новый тред](POST /messages/{id}/thread) — создать тред и ответить
+    - [Новое напоминание](POST /tasks) — создать задачу из контекста разговора
     - [Новая реакция](POST /messages/{id}/reactions) — поставить реакцию-индикатор
   </Step>
   <Step title="Ответ">
