--- a/apps/docs/content/guides/authorization.mdx
+++ b/apps/docs/content/guides/authorization.mdx
@@ -79,6 +79,8 @@ description: OAuth 2.0 токены, скоупы и ролевые ограни
 - **Персональный токен** — вы выбираете скоупы вручную при создании. Токен получит только запрошенные разрешения.
 - **Токен бота** — скоупы задаются автоматически и не настраиваются. Все боты (входящие вебхуки, исходящие вебхуки, unfurl-боты) получают одинаковый фиксированный набор разрешений.
 
+При добавлении новых скоупов в API токены ботов обновляются автоматически, а персональные токены необходимо пересоздать, выбрав нужные скоупы.
+
 Проверить скоупы текущего токена можно методом [Информация о токене](GET /oauth/token/info).
 
 ### Скоупы персональных токенов
@@ -99,7 +101,7 @@ description: OAuth 2.0 токены, скоупы и ролевые ограни
 - **Файлы:** `files:read`, `uploads:write`
 - **Вебхуки:** `webhooks:events:read`, `webhooks:events:delete`
 
-<Warning>Боты не имеют доступа к: `audit_events:read`, `chat_exports:read/write`, `users:create/update/delete`, `user_status:read/write`, `group_tags:write`, `webhooks:read/write`, `bots:write`.</Warning>
+<Warning>Боты не имеют доступа к: `audit_events:read`, `chat_exports:read/write`, `users:create/update/delete`, `user_status:read/write`, `group_tags:write`, `search:users/chats/messages`, `webhooks:read/write`, `bots:write`.</Warning>
 
 ## Ошибки авторизации
 
