fix: обновить скоупы ботов — добавить search:users/chats/messages (BAK-2534)

--- a/apps/docs/content/guides/authorization.mdx
+++ b/apps/docs/content/guides/authorization.mdx
@@ -99,9 +99,10 @@ description: OAuth 2.0 токены, скоупы и ролевые ограни
 - **Профиль:** `profile:read`, `profile_status:read`, `profile_status:write`
 - **Задачи:** `tasks:read`, `tasks:create`, `tasks:update`, `tasks:delete`
 - **Файлы:** `files:read`, `uploads:write`
+- **Поиск:** `search:users`, `search:chats`, `search:messages`
 - **Вебхуки:** `webhooks:events:read`, `webhooks:events:delete`
 
-<Warning>Боты не имеют доступа к: `audit_events:read`, `chat_exports:read/write`, `users:create/update/delete`, `user_status:read/write`, `group_tags:write`, `search:users/chats/messages`, `webhooks:read/write`, `bots:write`.</Warning>
+<Warning>Боты не имеют доступа к: `audit_events:read`, `chat_exports:read/write`, `users:create/update/delete`, `user_status:read/write`, `group_tags:write`, `webhooks:read/write`, `bots:write`.</Warning>
 
 ## Ошибки авторизации
 
