fix: улучшить description гайдов для OG-тегов

--- a/apps/docs/content/guides/audit-events.mdx
+++ b/apps/docs/content/guides/audit-events.mdx
@@ -1,6 +1,6 @@
 ---
 title: Журнал аудита событий
-description: Отслеживание событий безопасности
+description: Журнал аудита: типы событий, фильтрация и примеры запросов
 ---
 
 # Пачка Audit Events API
