--- a/apps/docs/content/guides/authorization.mdx
+++ b/apps/docs/content/guides/authorization.mdx
@@ -1,6 +1,6 @@
 ---
 title: Авторизация
-description: OAuth 2.0 токены, скоупы и ролевые ограничения
+description: Типы токенов, скоупы и настройка доступа к API
 ---
 
 # Авторизация
