--- a/apps/docs/content/guides/export.mdx
+++ b/apps/docs/content/guides/export.mdx
@@ -1,6 +1,6 @@
 ---
 title: Экспорт сообщений
-description: Экспорт данных пространства
+description: Экспорт сообщений из чатов: запрос, скачивание и структура архива
 ---
 
 # Экспорт сообщений
