--- a/apps/docs/content/guides/forms.mdx
+++ b/apps/docs/content/guides/forms.mdx
@@ -1,6 +1,6 @@
 ---
 title: Формы
-description: Представления с набором полей для пользователей
+description: Модальные формы ботов: поля ввода, жизненный цикл и валидация
 ---
 
 # Формы
