--- a/apps/docs/content/guides/requests-responses.mdx
+++ b/apps/docs/content/guides/requests-responses.mdx
@@ -1,6 +1,6 @@
 ---
 title: Запросы и ответы
-description: Формат запросов, пагинация, тестирование
+description: Формат запросов и ответов, тестирование API
 ---
 
 # Запросы и ответы
