--- a/apps/docs/content/guides/dlp.mdx
+++ b/apps/docs/content/guides/dlp.mdx
@@ -1,6 +1,6 @@
 ---
 title: DLP-система
-description: Политики предотвращения утечки данных
+description: Создание правил DLP: условия, контексты и действия
 ---
 
 # DLP-система
