feat: path-based URLs для per-update OG-тегов, фикс YAML frontmatter
- Path-based URLs: /guides/updates/YYYY-MM-DD вместо ?s=YYYY-MM-DD
  (Telegram игнорирует query-параметры при генерации превью)
- Выделен shared-компонент UpdatesPageContent
- Отдельные routes: /guides/updates/ и /guides/updates/[date]/
- Обновлены HeadingLink, RSS feed, sitemap
- Объединены дубли дат в updates.mdx (2026-02-27, 2025-06-02)
- YAML frontmatter: кавычки для description с двоеточиями

--- a/apps/docs/content/guides/dlp.mdx
+++ b/apps/docs/content/guides/dlp.mdx
@@ -1,6 +1,6 @@
 ---
 title: DLP-система
-description: Создание правил DLP: условия, контексты и действия
+description: "Создание правил DLP: условия, контексты и действия"
 ---
 
 # DLP-система
