--- a/apps/docs/content/guides/audit-events.mdx
+++ b/apps/docs/content/guides/audit-events.mdx
@@ -1,6 +1,6 @@
 ---
 title: Журнал аудита событий
-description: Журнал аудита: типы событий, фильтрация и примеры запросов
+description: "Журнал аудита: типы событий, фильтрация и примеры запросов"
 ---
 
 # Пачка Audit Events API
