--- a/apps/docs/content/guides/updates.mdx
+++ b/apps/docs/content/guides/updates.mdx
@@ -11,7 +11,7 @@ useUpdatesComponent: true
 
 <!-- update:2026-02-27 -->
 
-## Полнотекстовый поиск
+## Полнотекстовый поиск, сообщение о недоступности и новые поля сообщений
 
 Были добавлены новые методы для полнотекстового поиска по сотрудникам, чатам и сообщениям:
 
@@ -20,10 +20,6 @@ useUpdatesComponent: true
 - [Поиск сообщений](GET /search/messages)
 
 С помощью этих методов вы можете искать по текстовому запросу с поддержкой фильтрации и курсорной пагинации.
-
-<!-- update:2026-02-27 -->
-
-## Сообщение о недоступности и новые поля сообщений
 
 В модель статуса добавлено новое поле `away_message` — сообщение при режиме «Нет на месте», которое отображается в профиле пользователя и при отправке ему личного сообщения или упоминании в чате.
 
@@ -277,17 +273,13 @@ useUpdatesComponent: true
 
 <!-- update:2025-06-02 -->
 
-## Список участников чата
+## Список участников чата и название реакции
 
 Был добавлен новый метод:
 
 - [Список участников чата](GET /chats/{id}/members)
 
 С помощью этого метода можно запросить список участников чата с фильтрацией по ролям в чате.
-
-<!-- update:2025-06-02 -->
-
-## Название реакции
 
 В исходящий вебхук о добавлении и удалении реакций было добавлено новое поле:
 
